--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="mainn">
     <div class="container">
             <div class="left">
+                <div class="trial">
                 <img src="images/illustration-woman-online-desktop.svg" alt="" class="woman_img">
+                </div>
            
             <div class="box">
                 <img src="images/illustration-box-desktop.svg" alt="">
